--- a/missfit/missfit/Base.lproj/Main.storyboard
+++ b/missfit/missfit/Base.lproj/Main.storyboard
@@ -1153,7 +1153,7 @@
                                                         <constraint firstAttribute="height" constant="14" id="jQ5-5X-FvF"/>
                                                     </constraints>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="潇潇" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ivs-xE-csR">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" misplaced="YES" text="潇潇" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ivs-xE-csR">
                                                     <rect key="frame" x="79" y="402" width="30" height="30.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -1167,14 +1167,14 @@
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1.2KM" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lnv-iG-8KR">
-                                                    <rect key="frame" x="541" y="408.5" width="42.5" height="18"/>
-                                                    <fontDescription key="fontDescription" type="system" weight="thin" pointSize="15"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="1.2KM" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lnv-iG-8KR">
+                                                    <rect key="frame" x="538.5" y="408.5" width="45" height="18"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6MP-2z-PzX">
-                                                    <rect key="frame" x="572.5" y="435.5" width="11.5" height="13"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="10" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6MP-2z-PzX">
+                                                    <rect key="frame" x="572" y="435" width="11.5" height="13"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="27" id="yqH-kg-yWl"/>
                                                     </constraints>
@@ -1187,15 +1187,15 @@
                                                         </mask>
                                                     </variation>
                                                 </label>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="likes" translatesAutoresizingMaskIntoConstraints="NO" id="DdA-kb-2Z1">
-                                                    <rect key="frame" x="558.5" y="437.5" width="10" height="10"/>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="likes" translatesAutoresizingMaskIntoConstraints="NO" id="DdA-kb-2Z1">
+                                                    <rect key="frame" x="558" y="437" width="10" height="10"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="10" id="6k5-Ik-Jpe"/>
                                                         <constraint firstAttribute="height" constant="10" id="brR-Aw-bA5"/>
                                                     </constraints>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n3W-iM-Pxo">
-                                                    <rect key="frame" x="540" y="435.5" width="11.5" height="13"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="10" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n3W-iM-Pxo">
+                                                    <rect key="frame" x="540" y="435" width="11.5" height="13"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="27" id="4AE-Qi-qFp"/>
                                                     </constraints>
@@ -1533,18 +1533,18 @@
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hHT-N5-Txc">
-                                                    <rect key="frame" x="547" y="43" width="22" height="22"/>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hHT-N5-Txc">
+                                                    <rect key="frame" x="553" y="46" width="16" height="16"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="22" id="4mK-ig-yFC"/>
-                                                        <constraint firstAttribute="width" constant="22" id="7rm-EE-AJC"/>
+                                                        <constraint firstAttribute="height" constant="16" id="4mK-ig-yFC"/>
+                                                        <constraint firstAttribute="width" constant="16" id="7rm-EE-AJC"/>
                                                     </constraints>
                                                 </imageView>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="6wR-MO-dK9">
-                                                    <rect key="frame" x="547" y="68" width="22" height="22"/>
+                                                    <rect key="frame" x="553" y="71" width="16" height="16"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="22" id="9mh-20-9fS"/>
-                                                        <constraint firstAttribute="width" constant="22" id="xAf-bb-6SA"/>
+                                                        <constraint firstAttribute="height" constant="16" id="9mh-20-9fS"/>
+                                                        <constraint firstAttribute="width" constant="16" id="xAf-bb-6SA"/>
                                                     </constraints>
                                                 </imageView>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Sog-zb-Svh">
